Closed Bug 1217168 Opened 9 years ago Closed 9 years ago

Plugins are clipped incorrectly at the edge of the content window when a lite weight theme is installed

Categories

(Core :: Graphics: Layers, defect)

44 Branch
defect
Not set
normal

Tracking

()

VERIFIED FIXED
mozilla45
Tracking Status
firefox44 + verified
firefox45 --- verified
b2g-v2.5 --- fixed

People

(Reporter: 2ljpswpih, Assigned: mstange)

References

Details

(Keywords: regression, Whiteboard: [gfx-noted])

Attachments

(1 file)

User Agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64; rv:44.0) Gecko/20100101 Firefox/44.0
Build ID: 20151021030212

Steps to reproduce:

  1. Load http://telewizjarepublika.pl/szumlewicz-korwin-chce-dogadac-sie-z-pis-tylko-zjednoczona-lewica-jest-antysystemowa,24842.html
  2. Scroll down until you see the Flash video just above the comments
  3. Scroll up and down and observe the video.


Actual results:

Video is only partially redrawn when scrolling stops.
You can see this here:
https://youtu.be/dWhFiQOufnw


Expected results:

Video should be totally redrawn after end of scrolling.
Component: Untriaged → Graphics: Layers
Product: Firefox → Core
Blocks: 1137944
I'm not able to reproduce. tracy, can you try?
Flags: needinfo?(twalker)
I cannot reproduce this; the video paints fine on scrolling/stop.

to_du,  Is your Flash player up to date? If so, are you running any addons? What are they? (post about:support). Thanks.
Flags: needinfo?(twalker) → needinfo?(to_du)
My Flash is up-to-date.
Application Basics
------------------

Name: Firefox
Version: 44.0a1
Build ID: 20151021030212
Update Channel: nightly
User Agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64; rv:44.0) Gecko/20100101 Firefox/44.0
Multiprocess Windows: 1/1 (default: true)
Safe Mode: false

Crash Reports for the Last 3 Days
---------------------------------

All Crash Reports (including 1 pending crash in the given time range)

Extensions
----------

Name: Adblock Plus
Version: 2.6.11
Enabled: true
ID: {d10d0bf8-f5b5-c8b4-a8b2-2b9879e08c5d}

Name: Firebug
Version: 2.0.12
Enabled: true
ID: firebug@software.joehewitt.com

Graphics
--------

Adapter Description: Intel(R) HD Graphics 5500
Adapter Description (GPU #2): NVIDIA GeForce GTX 850M
Adapter Drivers: igdumdim64 igd10iumd64 igd10iumd64 igd12umd64 igdumdim32 igd10iumd32 igd10iumd32 igd12umd32
Adapter Drivers (GPU #2): nvd3dumx,nvwgf2umx,nvwgf2umx,nvwgf2umx nvd3dum,nvwgf2um,nvwgf2um,nvwgf2um
Adapter RAM: Unknown
Adapter RAM (GPU #2): 4095
Asynchronous Pan/Zoom: wheel input enabled
Device ID: 0x1616
Device ID (GPU #2): 0x1391
Direct2D Enabled: true
DirectWrite Enabled: true (10.0.10240.16430)
Driver Date: 8-24-2015
Driver Date (GPU #2): 10-2-2015
Driver Version: 10.18.15.4279
Driver Version (GPU #2): 10.18.13.5850
GPU #2 Active: false
GPU Accelerated Windows: 1/1 Direct3D 11 (OMTC)
Subsys ID: 229c103c
Subsys ID (GPU #2): 229c103c
Supports Hardware H264 Decoding: Yes
Vendor ID: 0x8086
Vendor ID (GPU #2): 0x10de
WebGL Renderer: Google Inc. -- ANGLE (Intel(R) HD Graphics 5500 Direct3D11 vs_5_0 ps_5_0)
windowLayerManagerRemote: true
AzureCanvasBackend: direct2d 1.1
AzureContentBackend: direct2d 1.1
AzureFallbackCanvasBackend: cairo
AzureSkiaAccelerated: 0

Important Modified Preferences
------------------------------

accessibility.blockautorefresh: true
accessibility.typeaheadfind: true
accessibility.typeaheadfind.flashBar: 0
browser.cache.disk.capacity: 358400
browser.cache.disk.filesystem_reported: 1
browser.cache.disk.smart_size.first_run: false
browser.cache.disk.smart_size.use_old_max: false
browser.cache.frecency_experiment: 2
browser.download.importedFromSqlite: true
browser.fixup.domainwhitelist.hp: true
browser.places.smartBookmarksVersion: 7
browser.sessionstore.restore_on_demand: false
browser.sessionstore.upgradeBackup.latestBuildID: 20151021030212
browser.startup.homepage_override.buildID: 20151021030212
browser.startup.homepage_override.mstone: 44.0a1
browser.tabs.crashReporting.email: [removed]
browser.tabs.crashReporting.emailMe: true
browser.tabs.crashReporting.includeURL: true
browser.tabs.remote.autostart: true
browser.tabs.remote.autostart.2: false
browser.urlbar.suggest.searches: true
browser.urlbar.userMadeSearchSuggestionsChoice: true
dom.apps.reset-permissions: true
dom.mozApps.used: true
extensions.lastAppVersion: 44.0a1
font.internaluseonly.changed: true
gfx.direct3d.last_used_feature_level_idx: 0
gfx.driver-init.appVersion: 42.0
gfx.driver-init.deviceID: 0x1616
gfx.driver-init.driverVersion: 10.18.15.4279
gfx.driver-init.feature-d2d: true
gfx.driver-init.feature-d3d11: true
gfx.driver-init.status: 2
media.gmp-eme-adobe.abi: x86_64-msvc-x64
media.gmp-eme-adobe.lastUpdate: 1445439818
media.gmp-eme-adobe.version: 15
media.gmp-gmpopenh264.lastUpdate: 1441871819
media.gmp-gmpopenh264.version: 1.4
media.gmp-manager.buildID: 20151021030212
media.gmp-manager.lastCheck: 1445446683
media.hardware-video-decoding.failed: false
network.cookie.prefsMigrated: true
network.predictor.cleaned-up: true
places.database.lastMaintenance: 1445326757
places.history.expiration.transient_current_max_pages: 104858
plugin.disable_full_page_plugin_for_types: application/pdf
plugin.importedState: true
privacy.cpd.cookies: false
privacy.cpd.offlineApps: true
privacy.cpd.siteSettings: true
privacy.donottrackheader.enabled: true
privacy.sanitize.migrateClearSavedPwdsOnExit: true
privacy.sanitize.migrateFx3Prefs: true
privacy.sanitize.timeSpan: 0
security.sandbox.content.tempDirSuffix: {04669062-160e-4e8e-b963-19bc9527b0da}
security.ssl.errorReporting.automatic: true
storage.vacuum.last.index: 1
storage.vacuum.last.places.sqlite: 1444406414
ui.osk.debug.keyboardDisplayReason: IKPOS: Touch screen not found.

Important Locked Preferences
----------------------------

JavaScript
----------

Incremental GC: true

Accessibility
-------------

Activated: false
Prevent Accessibility: 0

Library Versions
----------------

NSPR
Expected minimum version: 4.11 Beta
Version in use: 4.11 Beta

NSS
Expected minimum version: 3.20.1 Basic ECC
Version in use: 3.20.1 Basic ECC

NSSSMIME
Expected minimum version: 3.20.1 Basic ECC
Version in use: 3.20.1 Basic ECC

NSSSSL
Expected minimum version: 3.20.1 Basic ECC
Version in use: 3.20.1 Basic ECC

NSSUTIL
Expected minimum version: 3.20.1
Version in use: 3.20.1

Experimental Features
---------------------
Flags: needinfo?(to_du)
But with add-ons disabled (safe mode) bug also persists.
I think that you noticed that this bug only appears when this video is on the top of the screen?
This is tied to having a lite weight theme installed.
Status: UNCONFIRMED → NEW
Ever confirmed: true
Summary: Video is only partially redrawn when scrolling stops → Plugins are clipped incorrectly at the edge of the content window when a lite weight theme is installed
Regression window:
https://hg.mozilla.org/integration/mozilla-inbound/pushloghtml?fromchange=dd8f99f562aedc7f0e243f7b45a65d0959a79911&tochange=c6765de566a3

Regressed by: c6765de566a3	Markus Stange — Bug 1203190 - Don't intersect with the visible rect for fixed background images. r=mattwoodrow
[Tracking Requested - why for this release]: regression in Firefox 44.

Markus, can you please look into this?
Depends on: 1203190
Flags: needinfo?(mstange)
Keywords: regression
Whiteboard: [gfx-noted]
Blocks: 1203190
No longer blocks: 1137944
No longer depends on: 1203190
Bug 1217168 - Respect layer clip rects during plugin visibility computation. r?jimm
Attachment #8679625 - Flags: review?(jmathies)
Jim, can you test this patch for me on Windows? I wrote it on Mac and haven't tested it.
Do we have reftests for plugin visibility?
Flags: needinfo?(mstange) → needinfo?(jmathies)
(In reply to Markus Stange [:mstange] from comment #10)
> Jim, can you test this patch for me on Windows? I wrote it on Mac and
> haven't tested it.
> Do we have reftests for plugin visibility?

sure I'll take it for a spin.

I'm not aware of reftests specific to clipping of windowed plugins, doesn't look like we have anything - 

http://mxr.mozilla.org/mozilla-central/search?string=+wmode%3D&find=%2Fdom%2Fplugins%2Ftest%2Freftest%2F&findi=&filter=^[^\0]*%24&hitlimit=&tree=mozilla-central

Probably pretty error prone with windowed mode.

We do have a few browser chrome and plain tests down in dom/plugins/test - 

http://mxr.mozilla.org/mozilla-central/search?find=%2Fdom%2Fplugins%2Ftest%2Fmochitest%2F&string=+wmode%3D

and some apis in the test plugin for clipping and visibility. might be possible to add something here that checks general clipping for something like this.

http://mxr.mozilla.org/mozilla-central/source/dom/plugins/test/testplugin/nptest_platform.h#90
Flags: needinfo?(jmathies)
Comment on attachment 8679625 [details]
MozReview Request: Bug 1217168 - Respect layer clip rects during plugin visibility computation. r?jimm

this fixed the problem. are you planning on putting together a test?
Attachment #8679625 - Flags: review?(jmathies) → review+
Assignee: nobody → mstange
(In reply to Jim Mathies [:jimm] from comment #12)
> are you planning on putting together a test?

Not really... it doesn't look that simple after all, and I don't really want to spin up a Windows build environment just for writing a test.
Thanks for testing! I'll just land this patch as-is then.
https://hg.mozilla.org/integration/mozilla-inbound/rev/95b1852141da197eec3656167a08b3ed98b60a27
Bug 1217168 - Respect layer clip rects during plugin visibility computation. r=jimm
https://hg.mozilla.org/mozilla-central/rev/95b1852141da
Status: NEW → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla45
Bug is not fixed.
Ok, bug is fixed after today update ;).
Comment on attachment 8679625 [details]
MozReview Request: Bug 1217168 - Respect layer clip rects during plugin visibility computation. r?jimm

Approval Request Comment
[Feature/regressing bug #]: bug 1203190
[User impact if declined]: strange plugin clipping for users with lightweight themes
[Describe test coverage new/current, TreeHerder]: none
[Risks and why]: low, simple patch, and I think the code is only used when e10s is on (?)
[String/UUID change made/needed]: none
Attachment #8679625 - Flags: approval-mozilla-aurora?
Hi to_du@o2.pl, could you please verify that this issue is fixed as expected on the latest Nightly? Thanks in advance.
Flags: needinfo?(to_du)
Tracked for 44 and requesting QE team for verification of this fix to make sure there are no negative fall outs.
Flags: qe-verify+
Everything is ok.
Flags: needinfo?(to_du)
(In reply to to_du from comment #22)
> Everything is ok.

Thanks!
Status: RESOLVED → VERIFIED
Comment on attachment 8679625 [details]
MozReview Request: Bug 1217168 - Respect layer clip rects during plugin visibility computation. r?jimm

The fix was verified on Nightly, safe to uplift to Aurora44.
Attachment #8679625 - Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
(In reply to to_du from comment #0)
> Expected results:
> Video should be totally redrawn after end of scrolling.
The redraw works now, but how about the flickering of the video on scrolling? It is still reproducible.
45.0a1 (2015-11-18) Win 7
Flags: needinfo?(mstange)
I don't have a Windows machine to test with at the moment. But it's possible that the remaining flickering of plugins during scrolling is just the "expected" behavior for now. Jim, can you confirm?
Flags: needinfo?(mstange) → needinfo?(jmathies)
(In reply to Markus Stange [:mstange] from comment #28)
> I don't have a Windows machine to test with at the moment. But it's possible
> that the remaining flickering of plugins during scrolling is just the
> "expected" behavior for now. Jim, can you confirm?

yep, windowed plugins hide when scrolling. bug 1212813. for flash switching to constant windowless mode should address this, for everything else we're stuck with it.
Flags: needinfo?(jmathies)
Verified fixed FF 44.0a2 (2015-11-22) Win 7, based on comment 29
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: