Bug 1217168 - Respect layer clip rects during plugin visibility computation. r=jimm, a=ritu

--HG--
extra : rebase_source : 5891646fb493f68724af9fd972ac88c55d297b1b
extra : source : 95b1852141da197eec3656167a08b3ed98b60a27